Базовая версия финального решения по данному исследованию

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Hugging Face User Access Token
 # Получите токен на https://huggingface.co/settings/tokens
 HF_TOKEN=your_huggingface_token_here
+
+
+OPENAI_API_KEY=your_openai_token
